Correction de quelques petites erreurs

--- a/adherer/index.html
+++ b/adherer/index.html
@@ -16,7 +16,7 @@ layout: nofooter
             
             <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-okiwi/adhesions/adhesion-okiwi-2022/widget-vignette" style="width: 350px; height: 450px; border: none;"></iframe>
 
-            <p>ou par courrier à:</p>
+            <p>ou par courrier à&nbsp;:</p>
             <address>
                 <strong>Association Okiwi</strong><br>
                 chez Coolworking<br>
@@ -25,13 +25,15 @@ layout: nofooter
             </address>
         </div>
         <div class="col-lg-6 offset-lg-1">
-            <h2>A quoi servent les dons et les cotisations?</h2>
+            <h2>À quoi servent les dons et les cotisations&nbsp;?</h2>
 
-            <p> Les dons et les cotisations permettent à Okiwi dans un premier temps de payer ses frais fixes
-                comme:</p>
+            <p>
+                Les dons et les cotisations permettent à Okiwi dans un premier temps de payer ses frais fixes
+                comme&nbsp;:
+            </p>
             <ul>
                 <li>l'assurance responsabilité civile qui nous permet d'organiser autant d'évènements que nous
-                    souhaitons (Geek camp, coding dojos, Newcrafts Bordeaux...)
+                    souhaitons (Geek Camp, coding dojos, Newcrafts Bordeaux...)
                 </li>
                 <li>les frais de tenue de compte bancaire</li>
                 <li>les noms de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a
@@ -49,7 +51,7 @@ layout: nofooter
                 Et c’est aussi pouvoir apporter votre candidature pour le bureau si cela vous intéresse.
             </p>
             
-            <p>Pour finir, nous avons choisi une adhésion annuelle de 10€. </p>
+            <p>Pour finir, nous avons choisi une adhésion annuelle de 10&nbsp;€.</p>
 
         </div>
     </div>
