--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ layout: default
         <h2 class="bd-featurette-title">Coding Dojo&nbsp;?</h2>
         <p class="lead">
             Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeuses et développeurs améliorent
-            leurs compétences en programmation et en communication. Le principe est simple&nbsp, on prend un exercice de programmation,
+            leurs compétences en programmation et en communication. Le principe est simple&nbsp;: on prend un exercice de programmation,
             on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
             simple de Kent Beck&nbsp;:
         </p>
