--- a/merci.html
+++ b/merci.html
@@ -9,7 +9,7 @@ title: Merci
       <div class="col-lg-12 text-center">
         <h1>Merci !</h1>
 
-        <p>Nous avons bien reçu votre paiment.</p>
+        <p>Nous avons bien reçu votre paiement.</p>
 
         <p>L'ensemble des membres de l'association Okiwi vous remercie de votre cotisation !</p>
 
