Mise à jour de la page du Geek Camp pour l’édition de juin 2022

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -1,18 +1,19 @@
 ---
 layout: default
-title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
+title: Geek Camp 2022 - Évènements Okiwi
 ---
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
-                <h1>Geek Camp 2019 version été indien, le rétour</h1>
-                <h2>27, 28 et 29 septembre à Ruffiac 47700</h2>
+                <h1>Geek Camp 2022, le retour</h1>
+                <h2>17, 18 et 19 juin à Ruffiac (47700)</h2>
             </div>
             <div class="panel panel-default">
                 <div class="panel-body">
                     <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
-                    <ul>Au programme:
+                    <p>Au programme&nbsp;:</p>
+                    <ul>
                         <li>il n'y a pas de programme prédéfini</li>
                         <li>environnement collaboratif</li>
                         <li>partage de connaissances</li>
@@ -20,19 +21,19 @@ title: Geek Camp 2019.2 - vérsion été indien - Evénements Okiwi
                         <li>grillades et sorties campagnardes</li>
                         <li>dormir à la belle étoile</li>
                     </ul>
-		    <div class="well">
-			<a href="https://www.meetup.com/software-craftsmanship-bdx/events/263504171/">Les inscriptions sont ouvertes</a>
-		    </div>
+                    <p class="well">
+                        <a href="https://www.meetup.com/software-craftsmanship-bdx/events/263504171/">Les inscriptions sont ouvertes</a>
+                    </p>
                     <div>
-                        <a href="/img/Affiche-GeekCamp2019.2.jgp">
-                            <img src="/img/Affiche-GeekCamp2019.2.jpg" alt="Geek Camp flyer à imprimer" border="0" />
+                        <a href="/img/Affiche-GeekCamp.png">
+                            <img src="/img/Affiche-GeekCamp.png" alt="Flyer Geek Camp à imprimer" />
                         </a>
                     </div>
-		    <div style="margin-top: 20px; display: flex; align-items: center;">
-                        <div>Lisez l'article paru dans Sud-Ouest à propos de l'édition 2019 de juin !</div>
+                    <div style="margin-top: 20px; display: flex; align-items: center;">
+                        <div>Lisez l'article paru dans <i>Sud Ouest</i> à propos de l'édition de juin 2019&nbsp;!</div>
                         <div style="margin-left: 30px">
                             <a href="Sud-Ouest-article-GeekCamp2019.pdf" target="_blank">
-                            <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200" alt="Vignette de l'article Sud-Ouest" />
+                                <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200" alt="Vignette de l'article du Sud Ouest" />
                             </a>
                         </div>
                     </div>
