--- a/status/index.html
+++ b/status/index.html
@@ -8,9 +8,10 @@ layout: default
             <h1>Les membres du bureau</h1>
             <ul>
                 <li><strong>Président</strong> : Sam Cranford</li>
-                <li><strong>Vice-président</strong> : Fabien Lamarque</li>
-                <li><strong>Secrétaire</strong> : Christophe Cadilhac</li>
+                <li><strong>Secrétaire</strong> : Fabien Lamarque</li>
+                <li><strong>Vice-Secrétaire</strong> : Alain Delachaux</li>
                 <li><strong>Trésorière</strong> : Stéfanie Loiseleur</li>
+                <li><strong>Vice-Trésorier</strong> : Colin Garriga-Salaün</li>
             </ul>
             
             <h1>Les statuts de l'association</h1>
