Mise à jour du lien d'inscription Slack

--- a/slack/index.html
+++ b/slack/index.html
@@ -11,7 +11,7 @@ layout: nofooter
                 <a href="https://okiwi-fr.slack.com" class="btn btn-primary btn-lg btn-block">
                     Connexion <span class="hidden-sm-down">sur okiwi-fr.slack.com</span>
                 </a>
-                <a href="http://slack-okiwi.herokuapp.com/" class="btn btn-outline-primary btn-lg btn-block">
+                <a href="https://join.slack.com/t/okiwi-fr/shared_invite/zt-1l6hwigz7-QCIfJzym8SubcJgCsyFa_A" class="btn btn-outline-primary btn-lg btn-block">
                     Inscription
                 </a>
             </p>
