--- a/CoC.html
+++ b/CoC.html
@@ -48,15 +48,21 @@ em {
 }
 </style>
 
-<h1>Code de conduite pour la communauté (slack, rencontres, evenements)</h1>
+<h1>Code de conduite pour la communauté</h1>
 
 <p>Tous les participants pour nos
-événements et activités doivent accepter le code de conduite suivant. Les organisateurs
-s'attacheront à faire respecter ce code durant l'événement. Nous attendons de
+événements (communication en ligne, rencontres, evenements) doivent accepter le code de conduite suivant. Les organisateurs
+s'attacheront à faire respecter ce code à tout moment. Nous attendons de
 la part de chaque participant une coopération pour assurer un environnement
 sain pour tous.</p>
 
-<p><em>En bref, ne soyez pas un imbécile.</em></p>
+<p>Okiwi est bâti autour de la bienveillance, de l’inclusion et du partage. 
+  Okiwi est une communauté qui cultive l’ouverture et la diversité. 
+  Les prises de position publiques et militantes incitant à la haine, à la violence 
+  ou à la discrimination ne sont pas compatibles avec ces valeurs qui nous sont chères, 
+  même si ces prises de position ont lieu hors événement.</p>
+
+<p><em>En bref, ne soyez pas un imbécile. Restez dans la bienveillance, inclusion et partage.</em></p>
 
 <h2>Besoin d'aide&nbsp;?</h2>
 
@@ -64,24 +70,29 @@ sain pour tous.</p>
 
 <h2>La version rapide</h2>
 
-<p>Nos événements se veulent des expériences sans harcèlement ni discrimination, quel que soit votre sexe, 
-votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap, votre apparence physique, 
-votre race, votre ethnie, votre religion (ou absence de religion), votre niveau d'études ou votre niveau d'expérience.
-Nous ne tolérons aucun harcèlement des participants à nos événements,
-quelle qu'en soit la forme. Les expressions et les images à connotation sexuelle ne
-sont pas appropriées lors de nos événements. Ceci inclut les conférences, les
-ateliers, les soirées, Twitter, Slack, Discord et les autres médias en ligne. 
-Les participants qui violent ces règles peuvent être sanctionnés, voire exclus
-de l'activité et/ou la communauté à la discrétion de la communauté</p>
+<p>Nos événements se veulent des expériences sans harcèlement ni discrimination, quel que soit
+   votre sexe, votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap, 
+   votre apparence physique, votre race, votre ethnie, votre religion (ou absence de religion), 
+   votre niveau d’études ou votre niveau d’expérience. 
+   Nous ne tolérons aucun harcèlement des participants à nos événements, quelle qu’en soit 
+   la forme. </p>
+<p>La manque de bienveillance ne sera pas toléré. Tentative de détournement du but à des fins 
+  malveillantes ne sera pas toléré non plus. Ceci inclut les conférences, les ateliers, les soirées, 
+  la communication en ligne. Les participants qui violent ces règles peuvent être sanctionnés, 
+  voire exclus de l’activité et/ou la communauté à la discrétion de la communauté</p>
 
 <h2>La version moins rapide</h2>
 
-<p>Le harcèlement inclut des commentaires oraux sur le sexe, l'identité sexuelle,
-l'âge, l'orientation sexuelle, le handicap, l'apparence physique, le poids, la
-race, la religion, les images à connotation sexuelle dans des lieux publics, les
-intimidations délibérées, la traque, la poursuite, un harcèlement photographique
-ou vidéo, une suite d'interruption des conférences et des autres événements, un
-contact physique inapproprié et des avances sexuelles non désirées.</p>
+<p>Le harcèlement inclut des commentaires oraux sur le sexe, l’identité sexuelle, 
+  l’âge, l’orientation sexuelle, le handicap, l’apparence physique, le poids, 
+  la race, la religion, les images à connotation sexuelle dans des lieux publics, 
+  les intimidations délibérées, la traque, la poursuite, un harcèlement photographique 
+  ou vidéo, une suite d’interruption des conférences et des autres événements, 
+  un contact physique inapproprié et des avances sexuelles non désirées.</p>
+
+  <p>Les prises de position publiques et militantes incitant à la haine, à la violence 
+    ou à la discrimination créent une atmosphère intimidante et malveillante, 
+    donc non-accueillante, pouvant même être ressentie comme un harcèlement.</p>
 
 <p>Les participants à qui il sera demandé d'arrêter tout comportement de
 harcèlement doivent arrêter immédiatement.</p>
@@ -99,8 +110,7 @@ simple avertissement à l'exclusion du participant de la communauté.</p>
 
 <p>Si vous vous sentez harcelé, si vous pensez que quelqu'un se fait harceler,
 et plus généralement en cas de problème, merci de contacter immédiatement 
-un <a href="https://okiwi-fr.slack.com/account/workspace-settings#admins">administrateur</a> 
-ou organisateur.</p>
+un membre du bureau ou organisateur.</p>
 
 <p>Les membres de l'organisation seront ravis d'aider les participants à
 contacter la sécurité du bâtiment où se déroule l'événement, ou
@@ -108,8 +118,7 @@ les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
 façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
 la durée de l'activité. Nous apprécions votre participation à l'activité.</p>
 
-<p>Nous attendons des participants qu'ils suivent ces règles dans le bâtiment
-des activités et des ateliers, ainsi que pendant les événements sociaux
+<p>Nous attendons des participants qu'ils suivent ces règles pendant les événements sociaux
 relatifs à l'activité de l'association.</p>
 
 <p><b>A noter aussi</b>, sur le Slack d'Okiwi, on n'utilise pas @channel ni @here dans des chans avec beaucoup de monde, comme #general par exemple.</p>
