Mise à jour du meta et description du site

--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@ layout: default
     <div class="container">
         <h2 class="bd-featurette-title">Qu'est ce qu'Okiwi&nbsp;?</h2>
         <p class="lead">
-            Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux. Ouverte parce
-            que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun
+            Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux. 
+            Okiwi est bâti autour de la bienveillance, de l’inclusion et du partage. Okiwi est une communauté qui cultive l’ouverture et la diversité.
+            Ouverte parce que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun
             y apportera.
             <br>
             Nous organisons entre autres :
@@ -175,9 +176,8 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Geek Camp</h4>
                 <p>
-                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur un week-end en été.
-                    Présentations, lightning talks,
-                    séances de code, discussions, vin, bières et barbecues étaient au programme des éditions précédentes&nbsp;!
+                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur deux week-endn, un en juin et un en septembre.
+                    Il est organisé en format Forum Ouvert. Discussions, séances de code, cuisine en groupe et barbecues étaient au programme des éditions précédentes&nbsp;!
                 </p>
             </div>
         </div>
