correction d'un typo

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Geek Camp</h4>
                 <p>
-                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur deux week-endn, un en juin et un en septembre.
+                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur deux week-ends, un en juin et un en septembre.
                     Il est organisé en format Forum Ouvert. Discussions, séances de code, cuisine en groupe et barbecues étaient au programme des éditions précédentes&nbsp;!
                 </p>
             </div>
