--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@ layout: default
         <h2 class="bd-featurette-title">Qu'est ce qu'Okiwi&nbsp;?</h2>
         <p class="lead">
             Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux. 
-            Okiwi est bâti autour de la bienveillance, de l’inclusion et du partage. Okiwi est une communauté qui cultive l’ouverture et la diversité.
-            Ouverte parce que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun
-            y apportera.
+            Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage. Okiwi est une communauté qui cultive l’ouverture et la diversité.
+            Ouverte parce que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun y apportera.
             <br>
             Nous organisons entre autres :
         </p>
@@ -185,7 +184,7 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Le Slack Okiwi</h4>
                 <p>
-                    Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de plein de sujets qui touchent l'informatique. 
+                    Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de toutes sortes de sujets qui touchent l'informatique. 
                     C'est notre lieu de rencontre et d'échange virtuel où l'on peut discuter technique, organisationnel et même philosophie.
                 </p>
             </div>
