--- a/CoC.html
+++ b/CoC.html
@@ -1,6 +1,6 @@
 ---
 layout: nofooter
-title: Code de conduite pour la communauté Okiwi (slack, rencontres, evenements)
+title: Code de conduite pour la communauté Okiwi (Slack, Discord, rencontres, évènements)
 ---
 
 <style>
@@ -48,21 +48,21 @@ em {
 }
 </style>
 
-<h1>Code de conduite pour la communauté</h1>
+<h1>Code de conduite pour la communauté Okiwi</h1>
 
-<p>Tous les participants pour nos
-événements (communication en ligne, rencontres, evenements) doivent accepter le code de conduite suivant. Les organisateurs
+<p>Tous les participantes et participants dans le cadre de toutes nos activités (communication en ligne, rencontres, évènements) 
+  doivent accepter le code de conduite suivant. Les organisateurs et organisatrices
 s'attacheront à faire respecter ce code à tout moment. Nous attendons de
-la part de chaque participant une coopération pour assurer un environnement
-sain pour tous.</p>
+la part de chaque participant et participante une coopération pour assurer un environnement
+inclusif et bienveillant pour toutes et tous.</p>
 
-<p>Okiwi est bâti autour de la bienveillance, de l’inclusion et du partage. 
+<p>Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage. 
   Okiwi est une communauté qui cultive l’ouverture et la diversité. 
   Les prises de position publiques et militantes incitant à la haine, à la violence 
   ou à la discrimination ne sont pas compatibles avec ces valeurs qui nous sont chères, 
-  même si ces prises de position ont lieu hors événement.</p>
+  même si ces prises de position ont lieu en dehors des activités de l'association.</p>
 
-<p><em>En bref, ne soyez pas un imbécile. Restez dans la bienveillance, inclusion et partage.</em></p>
+<p><em>En résumé : communiquez avec bienveillance et inclusivité, restez dans un esprit de partage.</em></p>
 
 <h2>Besoin d'aide&nbsp;?</h2>
 
@@ -70,25 +70,26 @@ sain pour tous.</p>
 
 <h2>La version rapide</h2>
 
-<p>Nos événements se veulent des expériences sans harcèlement ni discrimination, quel que soit
+<p>Nos événements et canaux de communication se veulent des expériences sans harcèlement ni discrimination, quel que soit
    votre sexe, votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap, 
    votre apparence physique, votre race, votre ethnie, votre religion (ou absence de religion), 
    votre niveau d’études ou votre niveau d’expérience. 
-   Nous ne tolérons aucun harcèlement des participants à nos événements, quelle qu’en soit 
+   Nous ne tolérons aucun harcèlement des participants et participantes à nos événements, quelle qu’en soit 
    la forme. </p>
-<p>La manque de bienveillance ne sera pas toléré. Tentative de détournement du but à des fins 
-  malveillantes ne sera pas toléré non plus. Ceci inclut les conférences, les ateliers, les soirées, 
-  la communication en ligne. Les participants qui violent ces règles peuvent être sanctionnés, 
-  voire exclus de l’activité et/ou la communauté à la discrétion de la communauté</p>
+<p>La manque de bienveillance n'est pas toléré. Les tentatives de détournement du but de la communauté à des fins 
+  malveillantes n'est pas toléré. Ceci inclut les conférences, les ateliers, les soirées, 
+  la communication en ligne. Les participants et participantes qui violent ces règles peuvent être sanctionnées, 
+  voire exclues de l’activité et/ou de la communauté à la discrétion de ses modérateurs et modératrices.</p>
 
 <h2>La version moins rapide</h2>
 
-<p>Le harcèlement inclut des commentaires oraux sur le sexe, l’identité sexuelle, 
+<p>Le harcèlement inclut des commentaires oraux ou écrits sur le sexe, l’identité sexuelle, 
   l’âge, l’orientation sexuelle, le handicap, l’apparence physique, le poids, 
   la race, la religion, les images à connotation sexuelle dans des lieux publics, 
   les intimidations délibérées, la traque, la poursuite, un harcèlement photographique 
   ou vidéo, une suite d’interruption des conférences et des autres événements, 
-  un contact physique inapproprié et des avances sexuelles non désirées.</p>
+  un contact physique inapproprié et des avances sexuelles non désirées, des paroles ou
+  comportements sexistes, y compris les comportements inclus dans la définition du sexisme ordinaire.</p>
 
   <p>Les prises de position publiques et militantes incitant à la haine, à la violence 
     ou à la discrimination créent une atmosphère intimidante et malveillante, 
@@ -112,7 +113,7 @@ simple avertissement à l'exclusion du participant de la communauté.</p>
 et plus généralement en cas de problème, merci de contacter immédiatement 
 un membre du bureau ou organisateur.</p>
 
-<p>Les membres de l'organisation seront ravis d'aider les participants à
+<p>Les membres de l'organisation sont présents pour aider les participants et participantes à
 contacter la sécurité du bâtiment où se déroule l'événement, ou
 les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
 façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
