--- a/CoC.html
+++ b/CoC.html
@@ -119,8 +119,7 @@ les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
 façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
 la durée de l'activité. Nous apprécions votre participation à l'activité.</p>
 
-<p>Nous attendons des participants qu'ils suivent ces règles pendant les événements sociaux
-relatifs à l'activité de l'association.</p>
+<p>Nous attendons de tous les participants et participantes de suivre ces règles pendant toutes les activités de l'association.</p>
 
 <p><b>A noter aussi</b>, sur le Slack d'Okiwi, on n'utilise pas @channel ni @here dans des chans avec beaucoup de monde, comme #general par exemple.</p>
 
