refomatage de CoC.html, bougé text vers slack/index.html

--- a/CoC.html
+++ b/CoC.html
@@ -1,135 +1,95 @@
 ---
-layout: nofooter
+layout: default
 title: Code de conduite pour la communauté Okiwi (Slack, Discord, rencontres, évènements)
 ---
 
-<style>
-* { 
-  font-family: 'helvetica neue', arial, helvetica;
-  font-weight: 200;
-}
+<div class="container">
+  <h1>Code de conduite pour la communauté Okiwi</h1>
 
+  <p>Tous les participantes et participants dans le cadre de toutes nos activités (communication en ligne, rencontres,
+    évènements)
+    doivent accepter le code de conduite suivant. Les organisateurs et organisatrices
+    s'attacheront à faire respecter ce code à tout moment. Nous attendons de
+    la part de chaque participant et participante une coopération pour assurer un environnement
+    inclusif et bienveillant pour toutes et tous.</p>
 
-p, h1, h2 {
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
+  <p>Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage.
+    Okiwi est une communauté qui cultive l’ouverture et la diversité.
+    Les prises de position publiques et militantes incitant à la haine, à la violence
+    ou à la discrimination ne sont pas compatibles avec ces valeurs qui nous sont chères,
+    même si ces prises de position ont lieu en dehors des activités de l'association.</p>
 
-h1 {
-  font-size: 38px;
-}
+  <p><em>En résumé : communiquez avec bienveillance et inclusivité, restez dans un esprit de partage.</em></p>
 
-h2 { 
-  font-size: 28px;
-  margin-top: 48px;
-}
+  <h2>Besoin d'aide&nbsp;?</h2>
 
-p {
-  line-height: 24px;
-  font-size: 18px;
-  text-align: justify;
-}
+  <p>Nos informations de contact sont disponibles sur le <a href="https://okiwi.org/slack">Slack</a> d'Okiwi ou en
+    envoyant un email à contact [at] okiwi dot org</p>
 
-a {
-  color: blue;
-}
+  <h2>La version rapide</h2>
 
-em {
-  font-weight: 400;
-}
+  <p>Nos événements et canaux de communication se veulent des expériences sans harcèlement ni discrimination, quel que
+    soit
+    votre sexe, votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap,
+    votre apparence physique, votre race, votre ethnie, votre religion (ou absence de religion),
+    votre niveau d’études ou votre niveau d’expérience.
+    Nous ne tolérons aucun harcèlement des participants et participantes à nos événements, quelle qu’en soit
+    la forme. </p>
+  <p>La manque de bienveillance n'est pas toléré. Les tentatives de détournement du but de la communauté à des fins
+    malveillantes n'est pas toléré. Ceci inclut les conférences, les ateliers, les soirées,
+    la communication en ligne. Les participants et participantes qui violent ces règles peuvent être sanctionnées,
+    voire exclues de l’activité et/ou de la communauté à la discrétion de ses modérateurs et modératrices.</p>
 
-.footer {
-  padding: 40px 0;
-  background: #efefef;
-  margin: 0;
-  margin-top: 40px;
-  max-width: 100%;
-}
-</style>
+  <h2>La version moins rapide</h2>
 
-<h1>Code de conduite pour la communauté Okiwi</h1>
+  <p>Le harcèlement inclut des commentaires oraux ou écrits sur le sexe, l’identité sexuelle,
+    l’âge, l’orientation sexuelle, le handicap, l’apparence physique, le poids,
+    la race, la religion, les images à connotation sexuelle dans des lieux publics,
+    les intimidations délibérées, la traque, la poursuite, un harcèlement photographique
+    ou vidéo, une suite d’interruption des conférences et des autres événements,
+    un contact physique inapproprié et des avances sexuelles non désirées, des paroles ou
+    comportements sexistes, y compris les comportements inclus dans la définition du sexisme ordinaire.</p>
 
-<p>Tous les participantes et participants dans le cadre de toutes nos activités (communication en ligne, rencontres, évènements) 
-  doivent accepter le code de conduite suivant. Les organisateurs et organisatrices
-s'attacheront à faire respecter ce code à tout moment. Nous attendons de
-la part de chaque participant et participante une coopération pour assurer un environnement
-inclusif et bienveillant pour toutes et tous.</p>
-
-<p>Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage. 
-  Okiwi est une communauté qui cultive l’ouverture et la diversité. 
-  Les prises de position publiques et militantes incitant à la haine, à la violence 
-  ou à la discrimination ne sont pas compatibles avec ces valeurs qui nous sont chères, 
-  même si ces prises de position ont lieu en dehors des activités de l'association.</p>
-
-<p><em>En résumé : communiquez avec bienveillance et inclusivité, restez dans un esprit de partage.</em></p>
-
-<h2>Besoin d'aide&nbsp;?</h2>
-
-<p>Nos informations de contact sont disponibles sur le <a href="https://okiwi.org/slack">Slack</a> d'Okiwi ou en envoyant un email à contact [at] okiwi dot org</p>
-
-<h2>La version rapide</h2>
-
-<p>Nos événements et canaux de communication se veulent des expériences sans harcèlement ni discrimination, quel que soit
-   votre sexe, votre identité sexuelle, votre orientation sexuelle, votre âge, votre handicap, 
-   votre apparence physique, votre race, votre ethnie, votre religion (ou absence de religion), 
-   votre niveau d’études ou votre niveau d’expérience. 
-   Nous ne tolérons aucun harcèlement des participants et participantes à nos événements, quelle qu’en soit 
-   la forme. </p>
-<p>La manque de bienveillance n'est pas toléré. Les tentatives de détournement du but de la communauté à des fins 
-  malveillantes n'est pas toléré. Ceci inclut les conférences, les ateliers, les soirées, 
-  la communication en ligne. Les participants et participantes qui violent ces règles peuvent être sanctionnées, 
-  voire exclues de l’activité et/ou de la communauté à la discrétion de ses modérateurs et modératrices.</p>
-
-<h2>La version moins rapide</h2>
-
-<p>Le harcèlement inclut des commentaires oraux ou écrits sur le sexe, l’identité sexuelle, 
-  l’âge, l’orientation sexuelle, le handicap, l’apparence physique, le poids, 
-  la race, la religion, les images à connotation sexuelle dans des lieux publics, 
-  les intimidations délibérées, la traque, la poursuite, un harcèlement photographique 
-  ou vidéo, une suite d’interruption des conférences et des autres événements, 
-  un contact physique inapproprié et des avances sexuelles non désirées, des paroles ou
-  comportements sexistes, y compris les comportements inclus dans la définition du sexisme ordinaire.</p>
-
-  <p>Les prises de position publiques et militantes incitant à la haine, à la violence 
-    ou à la discrimination créent une atmosphère intimidante et malveillante, 
+  <p>Les prises de position publiques et militantes incitant à la haine, à la violence
+    ou à la discrimination créent une atmosphère intimidante et malveillante,
     donc non-accueillante, pouvant même être ressentie comme un harcèlement.</p>
 
-<p>Les participants à qui il sera demandé d'arrêter tout comportement de
-harcèlement doivent arrêter immédiatement.</p>
+  <p>Les participants à qui il sera demandé d'arrêter tout comportement de
+    harcèlement doivent arrêter immédiatement.</p>
 
-<p>Les sponsors sont aussi sujet à la politique anti-harcèlement. En
-particulier, les sponsors ne doivent pas utiliser d'images ou de matériels à
-connotation sexuelle. Ils ne doivent pas non plus engager d'activités à
-connotation sexuelle. L'équipe du stand (y compris les volontaires) ne doivent
-pas utiliser de vêtements, uniformes ou costumes à connotation sexuelle. Ils ne
-doivent pas non plus créer un environnement sexualisé.</p>
+  <p>Les sponsors sont aussi sujet à la politique anti-harcèlement. En
+    particulier, les sponsors ne doivent pas utiliser d'images ou de matériels à
+    connotation sexuelle. Ils ne doivent pas non plus engager d'activités à
+    connotation sexuelle. L'équipe du stand (y compris les volontaires) ne doivent
+    pas utiliser de vêtements, uniformes ou costumes à connotation sexuelle. Ils ne
+    doivent pas non plus créer un environnement sexualisé.</p>
 
-<p>Si un participant a un comportement de harcèlement, les membres de la
-communauté peuvent prendre toute action qui leur semble adéquate. Cela va d'un
-simple avertissement à l'exclusion du participant de la communauté.</p>
+  <p>Si un participant a un comportement de harcèlement, les membres de la
+    communauté peuvent prendre toute action qui leur semble adéquate. Cela va d'un
+    simple avertissement à l'exclusion du participant de la communauté.</p>
 
-<p>Si vous vous sentez harcelé, si vous pensez que quelqu'un se fait harceler,
-et plus généralement en cas de problème, merci de contacter immédiatement 
-un membre du bureau ou organisateur.</p>
+  <p>Si vous vous sentez harcelé, si vous pensez que quelqu'un se fait harceler,
+    et plus généralement en cas de problème, merci de contacter immédiatement
+    un membre du bureau ou organisateur.</p>
 
-<p>Les membres de l'organisation sont présents pour aider les participants et participantes à
-contacter la sécurité du bâtiment où se déroule l'événement, ou
-les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
-façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
-la durée de l'activité. Nous apprécions votre participation à l'activité.</p>
+  <p>Les membres de l'organisation sont présents pour aider les participants et participantes à
+    contacter la sécurité du bâtiment où se déroule l'événement, ou
+    les forces de l'ordre, à fournir une escorte ainsi qu'à aider de toute autre
+    façon les personnes victimes de harcèlement, pour garantir leur sécurité pendant
+    la durée de l'activité. Nous apprécions votre participation à l'activité.</p>
 
-<p>Nous attendons de tous les participants et participantes de suivre ces règles pendant toutes les activités de l'association.</p>
+  <p>Nous attendons de tous les participants et participantes de suivre ces règles pendant toutes les activités de
+    l'association.</p>
 
-<p><b>A noter aussi</b>, sur le Slack d'Okiwi, on n'utilise pas @channel ni @here dans des chans avec beaucoup de monde, comme #general par exemple.</p>
-
-<div class="footer">
-<p><small><em>
-
-Le <a href="https://github.com/leftlogic/confcodeofconduct.com">texte d'origine</a> est sous licence <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a><br>
-
-Merci d'aider à la traduction et à l'amélioration de ce texte forké : <a href="https://github.com/okiwi/confcodeofconduct.com">https://github.com/okiwi/confcodeofconduct.com</a><br>
-
-Ce texte est sous licence <a rel="license" href="http://www.wtfpl.net/txt/copying/">WTFPL</a></em></small>
-</p>
+  <div class="container-md fs-6 card">
+    <p>
+      Le <a href="https://github.com/leftlogic/confcodeofconduct.com">texte d'origine</a> est sous licence <a
+        rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0
+        Unported License</a>
+    </p>
+    <p>
+    Merci d'aider à la traduction et à l'amélioration de ce texte forké : <a
+      href="https://github.com/okiwi/confcodeofconduct.com">https://github.com/okiwi/confcodeofconduct.com</a>
+    </p>
+  </div>
 </div>
