--- a/slack/index.html
+++ b/slack/index.html
@@ -26,15 +26,17 @@ layout: nofooter
                         <li>Des rendez-vous IRL locaux, régionaux et nationaux (apéros, conférence, meetups, ...)</li>
                     </ul>
                 </p>
-            <p>
-                <a href="https://okiwi-fr.slack.com" class="btn btn-primary btn-lg btn-block">
+                <p><b>A noter aussi</b>, sur le Slack d'Okiwi, on n'utilise pas @channel ni @here dans des chans avec beaucoup de
+                    monde, comme #general par exemple.</p>
+            <p class="d-grid gap-2">
+                <a href="https://okiwi-fr.slack.com" class="btn btn-primary" role="button" data-bs-toggle="button">
                     Connexion <span class="hidden-sm-down">sur okiwi-fr.slack.com</span>
                 </a>
-                <a href="https://join.slack.com/t/okiwi-fr/shared_invite/zt-1l6hwigz7-QCIfJzym8SubcJgCsyFa_A" class="btn btn-outline-primary btn-lg btn-block">
+                <a href="https://join.slack.com/t/okiwi-fr/shared_invite/zt-1l6hwigz7-QCIfJzym8SubcJgCsyFa_A" class="btn btn-outline-primary" role="button" data-bs-toggle="button">
                     Inscription
                 </a>
             </p>
-            <p><a href="/CoC.html">Code de conduite</a></p>
+            <p>Ce <a href="/CoC.html">Code de conduite</a> est en vigueur dans le Slack, bien évidemment.</p>
         </div>
     </div>
 </div>
