ajouté des targets dans les liens

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ layout: default
         <h1>Okiwi</h1>
         <p class="lead">Catalyseur d'évènements informatiques sur Bordeaux</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/">
+            <a class="btn btn-primary btn-lg" href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_all">
                 Voir les évènements
             </a>
         </p>
@@ -159,7 +159,7 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Coding Dojos</h4>
                 <p>
-                    Les <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/">coding dojos</a> sont des sessions amusantes et intenses 
+                    Les <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft">coding dojos</a> sont des sessions amusantes et intenses 
                     pendant lesquelles des développeuses et développeurs de tous niveaux
                     améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du mois.
                 </p>
@@ -191,7 +191,7 @@ layout: default
             <div class="col-lg-4 col-md-6 m-b-3">
                 <h4>Le Discord Okiwi</h4>
                 <p>
-                    Nous utilisons <a href="https://discord.com/invite/BQa48a2">Discord</a> afin d'organiser des sessions d'échange et des codings dojo
+                    Nous utilisons <a href="https://discord.com/invite/BQa48a2" target="_blank">Discord</a> afin d'organiser des sessions d'échange et des codings dojo
                     en visioconférence.
                 </p>
             </div>
@@ -225,18 +225,16 @@ layout: default
             leurs compétences en programmation et en communication. Le principe est simple&nbsp;: on prend un exercice de programmation,
             on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
             simple de Kent Beck&nbsp;:
+            
+            <ul class="list-unstyled text-xs-center">
+                <li>passer tous les tests&nbsp;;</li>
+                <li>aucune duplication de code&nbsp;;</li>
+                <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
+                <li>réduire le nombre de classes et de méthodes.</li>
+            </ul>
         </p>
-
-
-        <ul class="list-unstyled text-xs-center">
-            <li>passer tous les tests&nbsp;;</li>
-            <li>aucune duplication de code&nbsp;;</li>
-            <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
-            <li>réduire le nombre de classes et de méthodes.</li>
-        </ul>
-
          <p class="lead">
-            <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" class="btn btn-outline-primary">
+            <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft" class="btn btn-outline-primary">
                 Voir les prochains codings dojos
             </a>
         </p>
