corrigé alignement regles kent beck

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@ layout: default
         border-top: 1px solid #eee;
     }
 
+    .left-list {
+        text-align: left;
+        padding-left: 10%;
+    }
+
     .bd-featurette .highlight {
         text-align: left;
     }
@@ -129,6 +134,7 @@ layout: default
             max-width: 80%;
         }
     }
+
 </style>
 <body class="bd-home">
 
@@ -220,19 +226,19 @@ layout: default
 <div class="bd-featurette">
     <div class="container">
         <h2 class="bd-featurette-title">Coding Dojo&nbsp;?</h2>
-        <p class="lead">
+        <div class="lead">
             Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeuses et développeurs améliorent
             leurs compétences en programmation et en communication. Le principe est simple&nbsp;: on prend un exercice de programmation,
             on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
             simple de Kent Beck&nbsp;:
-            
-            <ul class="list-unstyled text-xs-center">
+
+            <ul class="list-unstyled left-list">
                 <li>passer tous les tests&nbsp;;</li>
                 <li>aucune duplication de code&nbsp;;</li>
                 <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
                 <li>réduire le nombre de classes et de méthodes.</li>
             </ul>
-        </p>
+        </div>
          <p class="lead">
             <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft" class="btn btn-outline-primary">
                 Voir les prochains codings dojos
