MaJ page Geek Camp

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -3,40 +3,43 @@ layout: default
 title: Geek Camp 2022 - Évènements Okiwi
 ---
 <div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1>Geek Camp 2022, le retour</h1>
-                <h2>17, 18 et 19 juin à Ruffiac (47700)</h2>
+    <div class="card" style="border: none"> 
+        <div class="card-body">
+            <h2 class="card-title">Les dates pour 2023 sont établis</h2>
+                <p class="pt-2">
+                    <h1>Geek Camp du printemps 2023</h1>
+                    <h2>16, 17 et 18 juin à Ruffiac (47700)</h2>
+                </p>
+                <p class="pt-2">
+                    <h1>Geek Camp de l'automne 2023</h1>
+                    <h2>22, 23, 24 séptembre à Ruffiac (47700)</h2>
+                </p>
+            <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
+            <p>Au programme&nbsp;:</p>
+            <ul>
+                <li>il n'y a pas de programme prédéfini, c'est un forum ouvert</li>
+                <li>environnement collaboratif</li>
+                <li>partage de connaissances</li>
+                <li>du code, de la technique, du fun</li>
+                <li>grillades et sorties campagnardes</li>
+                <li>dormir à la belle étoile</li>
+            </ul>
+            <p class="row pt-2">
+                <a href="https://www.meetup.com/software-craftsmanship-bdx/events/" target="_blank">Les
+                    inscriptions seront bientôt ouvertes</a>
+            </p>
+            <div>
+                <a href="/img/Affiche-GeekCamp.png">
+                    <img src="/img/Affiche-GeekCamp.png" alt="Flyer Geek Camp à imprimer" />
+                </a>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
-                    <p>Au programme&nbsp;:</p>
-                    <ul>
-                        <li>il n'y a pas de programme prédéfini</li>
-                        <li>environnement collaboratif</li>
-                        <li>partage de connaissances</li>
-                        <li>du code, de la technique, du fun</li>
-                        <li>grillades et sorties campagnardes</li>
-                        <li>dormir à la belle étoile</li>
-                    </ul>
-                    <p class="well">
-                        <a href="https://www.meetup.com/software-craftsmanship-bdx/events/263504171/">Les inscriptions sont ouvertes</a>
-                    </p>
-                    <div>
-                        <a href="/img/Affiche-GeekCamp.png">
-                            <img src="/img/Affiche-GeekCamp.png" alt="Flyer Geek Camp à imprimer" />
-                        </a>
-                    </div>
-                    <div style="margin-top: 20px; display: flex; align-items: center;">
-                        <div>Lisez l'article paru dans <i>Sud Ouest</i> à propos de l'édition de juin 2019&nbsp;!</div>
-                        <div style="margin-left: 30px">
-                            <a href="Sud-Ouest-article-GeekCamp2019.pdf" target="_blank">
-                                <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200" alt="Vignette de l'article du Sud Ouest" />
-                            </a>
-                        </div>
-                    </div>
+            <div class="row pt-3">
+                <div>Lisez l'article paru dans <i>Sud Ouest</i> à propos de l'édition de juin 2019&nbsp;!</div>
+                <div style="margin-left: 30px">
+                    <a href="Sud-Ouest-article-GeekCamp2019.pdf" target="_blank">
+                        <img src="Sud-Ouest-article-GeekCamp2019-vignette.png" width="200"
+                            alt="Vignette de l'article du Sud Ouest" />
+                    </a>
                 </div>
             </div>
         </div>
